--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CLI Website</title>
+    <title>DDoS Attacker</title>
     <style>
         body {
             background-color: black;
@@ -60,7 +61,6 @@
     {% endif %}
 
     <script>
-        // JavaScript to dynamically show input fields based on user selection
         const optionInput = document.querySelector('input[name="option"]');
         const inputFields = document.getElementById('input-fields');
 
